# WorkingHours

./: LICENSE  README.md  WorkingHours.cabal  WorkingHours.hs  WorkingHoursCGI.hs  default.nix  flake.nix
.github/workflows/: nix-build.yml
